--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,28 @@
-# OS files
+# System files
 .DS_Store
 Thumbs.db
-desktop.ini
 
-# Editor directories and files
+# IDE files
 .idea/
 .vscode/
 *.sublime-project
 *.sublime-workspace
 
-# Dependency directories
+# Dependencies
 node_modules/
-jspm_packages/
-bower_components/
+vendor/
 
-# Distribution directories
-dist/
-build/
-out/
+# Environment files
+.env
+.env.local
+.env.*.local
 
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Misc
-.cache/
-.temp/
-coverage/
+# Build files
+dist/
+build/
